# line-detector

./: .clang-format  CMakeLists.txt  LICENSE
src/: advanced_item_registry.h  advanced_line.cpp  advanced_line.h  advanced_line_item.cpp  advanced_line_item.h  display_widget.cpp  display_widget.h  main.cpp
